# Mihjol-hub

./: .breakpoints  .dockerignore  .gitlab-ci.yml  .replit  Dockerfile  bandit_report.txt  config.py  create_tables.py  database.py  db_verification.py  integration_test.sh  main.py  populate_data.py  pylint_report.txt  pyproject.toml  query_database.py  replit.nix  requirements.txt  test.db  test_database.db  test_database.py  wsgi.py
app/: __init__.py  auth.py  forms.py  models.py  routes.py
app/static/css/: custom.css  main.css  styles.css
app/static/js/: main.js
app/templates/: 404.html  admin_panel.html  base.html  create_group.html  dashboard.html  dashboard_sidebar.html  delete_account.html  edit_comment.html  edit_group.html  error.html  home.html  login.html  profile.html  signup.html  view_group.html
core/: utils.py
migrations/versions/: 24969671b731_reset_and_recreate_all_tables.py  32e07277e100_added_creator_relationship_and_group_.py  632a5f442195_update_models_py_with_tokenblocklist.py  66fa1bd500d2_add_tokenblocklist_model.py  b5dfbf8eca7b_add_created_at_to_user_model.py
tests/: base.py  test_auth.py  test_routes.py
tests/integ/: test_index.py
tests/unit/: test_grpc_index.py
